--- a/wallet.json.example
+++ b/wallet.json.example
@@ -1,5 +1,5 @@
 {
-  "priv": "private key here",
-  "addr": "octxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
+  "priv": "OPU26+Ynp0oy4e0P00wn75KfgD72kFrNLcJEShJ/Ys=",
+  "addr": "octBM31q9HJzSkgd6SQhBeL3WxJcvQKB2oAR87223rvBfH8",
   "rpc": "https://octra.network"
 }
